alteracao-layout-imagem; alteracao-css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span class="link-blue">Inscreva-se</span>
                 </p>
             </div>
-            <div class="get-the-app">
+            <div class="group">
                 <p class="get-app">Baixe o aplicativo</p>
                 <div class="download">
                     <a href="#" class="app-download"></a>
